// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRtlToggle should render correctly 1`] = `
<DocumentFragment>
  <button
    class="bpk-link"
    title="Keyboard Shortcut: ctrl + cmd + r"
    type="button"
  >
    RTL on
  </button>
</DocumentFragment>
`;

exports[`BpkRtlToggle should render correctly with the className prop 1`] = `
<DocumentFragment>
  <button
    class="bpk-link foo"
    title="Keyboard Shortcut: ctrl + cmd + r"
    type="button"
  >
    RTL on
  </button>
</DocumentFragment>
`;
